<resources>
    <string name="app_name">WorkOutList</string>
    <string name="currentRoutines">Rutinas Actuales</string>
    <string name="completedRoutines">Rutinas Completadas</string>
    <string name="predefinedRoutines">Rutinas Predefinidas</string>
    <string name="onGoing">En Curso: </string>
    <string name="totalCompleted">Totales completadas: </string>
    <string name="percentCompleted">Rutinas actuales: </string>
    <string name="createRoutine">Crea tu propia rutina</string>
    <string name="name">Nombre: </string>
    <string name="hintName">Nombre de la rutina</string>
    <string name="numberReps">Número de ejercicios que hará: </string>
    <string name="typeRoutine">Tipo de rutina: </string>
    <string name="buttonAdd">Crear</string>
    <string name="hintNameTask">Nombre del ejercicio</string>
    <string name="numberRepsTask">Objetivo de repeticiones: </string>
    <string name="numberSets">Numero de series: </string>
    <string name="workOutRoutine">Rutina de entrenamiento</string>
    <string name="addTask">Crea los ejercicios de la rutina</string>
    <string name="createRoutines">Crea tu rutina</string>
    <string name="currentReps">Repeticiones actuales</string>
    <string name="refresh">Actualizar</string>
    <string name="updateTask">Actualice la rutina</string>
</resources>
