<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTask"
    android:background="@drawable/formbckg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            />

        <EditText
            android:id="@+id/editTextTaskName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_margin="10dp"
            android:ems="15"
            android:maxLength="25"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorContrast"
            android:hint="@string/hintNameTask"/>


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:text="@string/numberSets"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageButton
                    android:id="@+id/buttonLessSets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:padding="10dp"
                    android:src="@drawable/less"
                    android:background="@android:color/transparent"
                    />

                <TextView
                    android:id="@+id/numberSetsTask"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorElevationText"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="1"
                    android:textColor="@color/colorContrast"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/buttonPlusSets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:padding="10dp"
                    android:src="@drawable/plus"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:text="@string/numberRepsTask"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            >
        <ImageButton
            android:id="@+id/buttonLessReps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:src="@drawable/less"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/numberRepsTask"
            android:layout_width="45dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:text="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorContrast"
            android:background="@color/colorElevationText"/>

        <ImageButton
            android:id="@+id/buttonPlusReps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:src="@drawable/plus"
            android:background="@android:color/transparent"
            />
        </LinearLayout>

    </LinearLayout>




    <Button
        android:id="@+id/buttonSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/buttonAdd"
        android:elevation="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorElevation"/>

    </LinearLayout>
</ScrollView>